[package]
name = "winmgr"
version = "0.1.0"
edition = "2024"

[dependencies]
nohash-hasher = "0.2.0"
winit = { version = "0.30.12", features = ["serde"] }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
directories = "6.0.0"
clap = { version = "4.5.54", features = ["derive"] }
winreg = "0.55.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
